version/0.19/_sources/api/solver/_autosummary/settings/injections.rst.txt
:orphan:

.. _injections:

injections
==========

.. autoclass:: ansys.fluent.core.solver.settings_241.injections.injections
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`injections_child <injections_child>`


.. rubric:: Included in:

======================================   ==============================================================================================================================================================================================================

Parent                                                                                                                                                                                                                                          Summary

======================================   ==============================================================================================================================================================================================================
:ref:`discrete_phase <discrete_phase>`       Toplevel menu of the Discrete Phase multiphase model. A discrete phase model (DPM) is used when the aim is to investigate the behavior of the particles from a Lagrangian view and a discrete perspective.

======================================   ==============================================================================================================================================================================================================

